# st25dv

./: .gitignore  CMakeLists.txt  README.md  st,st25dv.yaml
ST25DV/BSP/: st25dv_nfctag.c  st25dv_nfctag.cpp
ST25DV/ST25DV/: st25dv.c  st25dv.h  st25dv_bus_io.c  st25dv_bus_io.h
src/BSP/: st25dv_nfctag.h
src/ST25DV/: st25dv.c
src/libNDEF/: tagtype5_wrapper.c
zephyr/: CMakeLists.txt  KConfig  KConfig.st25dv  module.yml
